change in menus and content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@ Released   : 20100122
     <%= render :partial => "/shared/ie6check" if request.env['HTTP_USER_AGENT'] =~ /MSIE/ -%>
 	<div id="logo">
 		<h1><a href="#">DIY</a></h1>
-		<p><em>Do It Yourself</em></p>
+		<p><em>Lawyer Assisted diy </em></p>
 	</div>
 	<hr />
 	<!-- end #logo -->
