--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -2,8 +2,12 @@
 <div id="menu">
     <ul>
         <li><a href="/home" class="first">Home</a></li>
-        <li class="current_page_item"><a href="/blog">Blog</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/why-nike">Why Nike</a></li>
+        <li><a href="/process">The Process</a></li>
+        <li><a href="/hot-topics">Hot Topics</a></li>
+        <li><a href="/legal-forms">Legal Forms</a></li>
+        <li><a href="/legal-help">Legal Help</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
 </div>
